kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mizotakhteh
  labels:
    istio-injection: enabled
