kubernetes/base/lesson-postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-lesson
  labels:
    app: postgresql-lesson
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql-lesson
