kubernetes/base/lesson-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lesson
  labels:
    app: lesson
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: lesson
